# buildbuddy-toolchain

./: .bazelignore  .gitattributes  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  deps.bzl  extensions.bzl  rules.bzl
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: build-examples-bzlmod.yml  build-examples-workspace.yml  ci.yml  examples-bzlmod-build.yml  publish.yml  release.yaml  release_prep.sh  tag.yaml
examples/: BUILD.bazel
examples/bzlmod/: .bazelrc  BUILD  MODULE.bazel  README.md
examples/workspace/: .bazelrc  BUILD  WORKSPACE  main.cc
templates/: BUILD  BUILD.tpl  Makevars.tpl  cc_toolchain_config.bzl  cc_wrapper.sh.tpl  gcc_config.bzl.tpl  include_directory_paths_gcc  include_directory_paths_msvc  llvm_cc_toolchain_config.bzl.tpl  msvc_config.bzl.tpl  windows_cc_toolchain_config.bzl  windows_exec.ps1.tpl
toolchains/cc/: BUILD
