module(
    name = "toolchains_buildbuddy",
    repo_name = "io_buildbuddy_buildbuddy_toolchain",
)

bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "platforms", version = "0.0.10")

bazel_dep(
    name = "rules_bazel_integration_test",
    version = "0.34.0",
    dev_dependency = True,
)
bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.2.0.2",
    dev_dependency = True,
)

buildbuddy = use_extension("//:extensions.bzl", "buildbuddy")
use_repo(buildbuddy, "buildbuddy_toolchain")

register_toolchains(
    # Do not use :all because aliases are not picked up by wildcard registration
    "//toolchains/cc:ubuntu_gcc_x86_64",
    "//toolchains/cc:ubuntu_gcc_arm64",
    "//toolchains/cc:windows_msvc_x86_64",
)

bazel_binaries = use_extension(
    "@rules_bazel_integration_test//:extensions.bzl",
    "bazel_binaries",
    dev_dependency = True,
)
bazel_binaries.download(version_file = "//:.bazelversion")
use_repo(bazel_binaries, "bazel_binaries", "bazel_binaries_bazelisk", "build_bazel_bazel_.bazelversion")
