load("@bazel_binaries//:defs.bzl", "bazel_binaries")
load(
    "@rules_bazel_integration_test//bazel_integration_test:defs.bzl",
    "bazel_integration_test",
    "default_test_runner",
)

# Test runner for integration tests
default_test_runner(
    name = "test_runner",
    bazel_cmds = [
        "info",
        "build //:main",
    ],
)

# Remote execution test runner that exercises BuildBuddy RBE (bzlmod)
default_test_runner(
    name = "rbe_test_runner",
    bazel_cmds = [
        "info",
        "build //:main --config=remote-linux --extra_toolchains=@toolchains_buildbuddy//toolchains/cc:ubuntu_gcc_x86_64 --noremote_accept_cached --noremote_upload_local_results --experimental_platform_in_output_dir --remote_header=x-buildbuddy-api-key=${BUILDBUDDY_API_KEY}",
        "build //:main --config=remote-linux-arm64 --extra_toolchains=@toolchains_buildbuddy//toolchains/cc:ubuntu_gcc_arm64 --noremote_accept_cached --noremote_upload_local_results --experimental_platform_in_output_dir --remote_header=x-buildbuddy-api-key=${BUILDBUDDY_API_KEY}",
    ],
)

# Remote execution test runner for WORKSPACE (non-bzlmod)
default_test_runner(
    name = "workspace_rbe_test_runner",
    bazel_cmds = [
        "info",
        "build //:main --config=remote-linux --platforms=@buildbuddy_toolchain//:platform_linux_x86_64 --extra_execution_platforms=@buildbuddy_toolchain//:platform_linux_x86_64 --extra_toolchains=@buildbuddy_toolchain//:ubuntu_cc_toolchain --noremote_accept_cached --noremote_upload_local_results --experimental_platform_in_output_dir --remote_header=x-buildbuddy-api-key=${BUILDBUDDY_API_KEY}",
        "build //:main --config=remote-linux --platforms=@buildbuddy_toolchain//:platform_linux_arm64 --extra_execution_platforms=@buildbuddy_toolchain//:platform_linux_arm64 --extra_toolchains=@buildbuddy_toolchain//:ubuntu_cc_toolchain_arm64 --noremote_accept_cached --noremote_upload_local_results --experimental_platform_in_output_dir --remote_header=x-buildbuddy-api-key=${BUILDBUDDY_API_KEY}",
    ],
)

# Filegroup to collect child workspace files
filegroup(
    name = "bzlmod_workspace_files",
    srcs = [
        "bzlmod/.bazelrc",
        "bzlmod/.gitignore",
        "bzlmod/BUILD",
        "bzlmod/MODULE.bazel",
        "bzlmod/main.cc",
    ],
)

filegroup(
    name = "workspace_workspace_files",
    srcs = [
        "workspace/.bazelrc",
        "workspace/.gitignore",
        "workspace/BUILD",
        "workspace/WORKSPACE",
        "workspace/main.cc",
    ],
)

# Integration test using the bzlmod example workspace
bazel_integration_test(
    name = "bzlmod_test",
    bazel_binaries = bazel_binaries,
    bazel_version = bazel_binaries.versions.current,
    tags = [],
    test_runner = ":test_runner",
    workspace_files = [
        ":bzlmod_workspace_files",
        "//:local_repository_files",
    ],
    workspace_path = "bzlmod",
)

# Integration test that verifies remote builds using BuildBuddy RBE
bazel_integration_test(
    name = "bzlmod_rbe_test",
    additional_env_inherit = [
        "BUILDBUDDY_API_KEY",
    ],
    bazel_binaries = bazel_binaries,
    bazel_version = bazel_binaries.versions.current,
    tags = [],
    test_runner = ":rbe_test_runner",
    workspace_files = [
        ":bzlmod_workspace_files",
        "//:local_repository_files",
    ],
    workspace_path = "bzlmod",
)

# Integration test using the workspace (non-bzlmod) example workspace
bazel_integration_test(
    name = "workspace_test",
    bazel_binaries = bazel_binaries,
    bazel_version = bazel_binaries.versions.current,
    tags = [],
    test_runner = ":test_runner",
    workspace_files = [
        ":workspace_workspace_files",
        "//:local_repository_files",
    ],
    workspace_path = "workspace",
)

# Integration test that verifies remote builds using BuildBuddy RBE (workspace/non-bzlmod)
bazel_integration_test(
    name = "workspace_rbe_test",
    additional_env_inherit = [
        "BUILDBUDDY_API_KEY",
    ],
    bazel_binaries = bazel_binaries,
    bazel_version = bazel_binaries.versions.current,
    tags = [],
    test_runner = ":workspace_rbe_test_runner",
    workspace_files = [
        ":workspace_workspace_files",
        "//:local_repository_files",
    ],
    workspace_path = "workspace",
)
