module(name = "example")

bazel_dep(name = "buildbuddy_toolchain", repo_name = "buildbuddy")
local_path_override(
    module_name = "buildbuddy_toolchain",
    path = "../../",
)

buildbuddy = use_extension("@buildbuddy//:extensions.bzl", "buildbuddy")

# Example customizations (all optional):
#
# Customizing Platform Definitions:
#   - Using a BuildBuddy's prebuilt image:
#     buildbuddy.platform(buildbuddy_container_image = "UBUNTU20_04_IMAGE")
#   - OR bring your own container image:
#     buildbuddy.platform(container_image = "docker://my-container.image/replace/me@sha256:1234567890abcdef")
#
# Customizing GCC Toolchain(Linux) Definitions:
#     buildbuddy.gcc_toolchain(
#         gcc_major_version = "11",
#         extra_cxx_builtin_include_directories = ["/some/include/dir"],
#     )
#
# Customizing MSVC Toolchain(Windows) Definitions:
#     buildbuddy.msvc_toolchain(
#         msvc_edition = "Enterprise",
#         msvc_release = "2022",
#         msvc_version = "14.39.33519",
#         windows_kits_release = "10",
#         windows_kits_version = "10.0.22621.0",
#     )

# All relevant toolchain and platform targets should be available under "@buildbuddy_toolchain//..." repository
use_repo(buildbuddy, "buildbuddy_toolchain")
