module(name = "example")

bazel_dep(name = "rules_cc", version = "0.2.8")

# "@toolchains_buildbuddy" is the module in the Bazel registry
bazel_dep(name = "toolchains_buildbuddy")
local_path_override(
    module_name = "toolchains_buildbuddy",
    path = "../../",
)

# The module provides an extension named "buildbuddy".
# The extension creates a repository named "@buildbuddy_toolchain".
buildbuddy = use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy")  # buildifier: disable=unused-variable

# Example customizations (all optional):
#
# Customizing Platform Definitions:
#   - Using a BuildBuddy's prebuilt image:
#     buildbuddy.platform(buildbuddy_container_image = "UBUNTU20_04_IMAGE")
#   - OR bring your own container image:
#     buildbuddy.platform(container_image = "docker://my-container.image/replace/me@sha256:1234567890abcdef")
#
# Customizing GCC Toolchain(Linux) Definitions:
#     buildbuddy.gcc_toolchain(
#         gcc_major_version = "11",
#         extra_cxx_builtin_include_directories = ["/some/include/dir"],
#     )
#
# Customizing MSVC Toolchain(Windows) Definitions:
#     buildbuddy.msvc_toolchain(
#         msvc_edition = "Enterprise",
#         msvc_release = "2022",
#         msvc_version = "14.39.33519",
#         windows_kits_release = "10",
#         windows_kits_version = "10.0.22621.0",
#     )

# All relevant toolchain and platform targets should be available under "@buildbuddy_toolchain//..." repository
#
# For convenience, the platform and toolchain targets are also "alias"ed under these packages inside the module:
#   - @toolchains_buildbuddy//platforms/
#   - @toolchains_buildbuddy//toolchains/cc/
#
# User SHOULD prefer using these "@toolchains_buildbuddy//" Module's targets, over the repository targets
# to avoid any breaking changes in the future.
#
# (Optional) Use the repository directly instead.
#     use_repo(buildbuddy, "buildbuddy_toolchain")
#
# (Optional) Register the toolchains.
#     register_toolchains(
#         "@toolchains_buildbuddy//toolchains/cc:all",
#     )
